# FootballTracker

./: .gitignore  CONTRIBUTING.md  Cargo.toml  LICENSE  README.md  build.rs  convert_pt_to_onnx.py  requirements.in  requirements.txt
.git-hooks/: pre-commit
src/: main.rs
