[package]
name = "FootballTracker"
version = "0.1.0"
edition = "2021"
description  = "An application written in Rust that uses machine learning, computer vision and deep learning to create a football analysis system"
readme = "README.md"
repository = "https://github.com/DanelBanel/FootballTracker"
license-file = "LICENSE"
keywords = ["AI", "ML", "OpenCV", "YOLO", "Rust", "Machine Learning", "Artificial Intelligence", "Object Tracking"]

[dependencies]
od_opencv = "0.1.8"
# opencv = "0.66"
opencv = "0.94.4"

# https://doc.rust-lang.org/cargo/reference/specifying-dependencies.html
# https://doc.rust-lang.org/cargo/reference/pkgid-spec.html
[dev-dependencies]
